--- a/src/components/layout/NavBtn.scss
+++ b/src/components/layout/NavBtn.scss
@@ -1,54 +1,55 @@
+
+@import "./src/style/helpers/variables";
 .nav-btn {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-    cursor: pointer;
-    z-index: 5;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  height: 35px;
+  justify-content: center;
+  position: absolute;
+  right: 2rem;
+  top: 1.5rem;
+  transition: 1s;
+  z-index: 5;
+
+  .nav-line {
+    background: $secondary-font-color;
+    height: 3px;
+    margin-bottom: 5px;
+    transition: 1s;
+    width: 2rem;
+  }
+
+  &.show {
+    transform: rotate(180deg);
     transition: 1s;
 
-    .nav-line {
-        width: 28px;
-        height: 3px;
-        margin-bottom: 5px;
-        background: black;
-        transition: 1s;
+    .nav-line:nth-child(1) {
+      background: $primary-color;
+      height: 3px;
+      margin-bottom: 5px;
+      transform: rotate(45deg) translate(5px, 5px);
+      transition: 1s;
+      width: 2rem;
+
     }
 
-    &-close {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-        cursor: pointer;
-        z-index: 5;
-        transition: 1s;
-        transform: rotate(180deg);
-
-        .nav-line:nth-child(1) {
-            width: 28px;
-            height: 3px;
-            margin-bottom: 5px;
-            background: black;
-            transform: rotate(45deg) translate(5px, 5px);
-            transition: 1s;
-
-        }
-
-        .nav-line:nth-child(2) {
-            width: 28px;
-            height: 3px;
-            margin-bottom: 5px;
-            background: black;
-            transition: 1s;
-            opacity: 0;
-        }
-
-        .nav-line:nth-child(3) {
-            width: 28px;
-            height: 3px;
-            margin-bottom: 5px;
-            background: black;
-            transform: rotate(-45deg) translate(7px, -6px);
-            transition: 1s;
-        }
+    .nav-line:nth-child(2) {
+      background: $primary-color;
+      height: 3px;
+      margin-bottom: 5px;
+      opacity: 0;
+      transition: 1s;
+      width: 2rem;
     }
+
+    .nav-line:nth-child(3) {
+      background: $primary-color;
+      height: 3px;
+      margin-bottom: 5px;
+      transform: rotate(-45deg) translate(7px, -6px);
+      transition: 1s;
+      width: 2rem;
+    }
+  }
 }
