--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -1,40 +1,98 @@
+@import "./src/style/helpers/variables";
+
 .navbar {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100vh;
-    background: #ABB6BB;
-    overflow: scroll;
-    padding-top: 4rem;
-    width: 30%;
-    right: 0;
-    top: 0;
-    box-shadow: -2px 0 5px 0 rgba(0,0,0,0.75);
+  background: $secondary-color;
+  opacity: .8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  padding: 3.5rem 0 3rem;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transition: 1s;
+  width: 30%;
 
-    ul {
-        list-style-type: none;
+  .arrow-up {
+    font-size: 2rem;
+    margin: -20px 0 10px 0;
+    color: $primary-color;
+    opacity: .5;
 
-        li {
-            font-family: 'Philosopher', sans-serif;
-            font-size: 2rem;
-            padding: 1rem;
-            border-bottom: 1px solid #F9F7F3;
-
-            .link {
-                color: #F9F7F3;
-                text-decoration: none;
-
-                span {
-                    font-size: 1.5rem;
-                }
-            }
-        }
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
     }
+  }
+
+  .arrow-down {
+    font-size: 2rem;
+    margin: 10px 0 -20px 0;
+    color: $primary-color;
+    opacity: .5;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+    }
+  }
+
+  ul {
+    overflow: auto;
+    list-style-type: none;
+    height: 100vh;
+    width: 100%;
+
+    @for $x from 1 through 10 {
+      li:nth-child(#{$x}) {
+        transition-delay: ($x+.3) * .1s;
+        transition-timing-function: linear;
+        transition-duration:  .4s;
+      }
+    }
+
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: $secondary-color;
+    }
+
+    .li-style {
+
+      &.close {
+        transform: translateX(110%);
+        transition: .5s;
+      }
+
+      .link {
+        text-align: center;
+        color: darken($secondary-font-color, 5%);
+        text-decoration: none;
+        border-bottom: 2px solid lighten($primary-color, 5%);
+        cursor: pointer;
+        display: block;
+        font-family: 'Philosopher', sans-serif;
+        font-size: 2rem;
+        margin: 0 auto 1.5rem;
+        padding: .5rem 0;
+        width: 50%;
+
+        &:hover {
+          border-bottom: 2px solid $secondary-font-color;
+          color: lighten($primary-color, 5%);
+          transition-timing-function: linear;
+          transition-duration:  .4s;
+        }
+      }
+    }
+  }
+
+  &.close {
+    transform: translateX(110%);
+    transition: 1s;
+
+  }
 }
-
-
-
-
-
