--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -1,7 +1,7 @@
 @import "./src/style/helpers/variables";
 
 .navbar {
-  background: $secondary-color;
+  background: darken($secondary-color, 10%);
   opacity: .6;
   display: flex;
   flex-direction: column;
