--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -52,13 +52,13 @@
       }
     }
 
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background: $secondary-color;
-    }
+    //&::-webkit-scrollbar {
+    //  width: 10px;
+    //}
+    //
+    //&::-webkit-scrollbar-track {
+    //  background: $secondary-color;
+    //}
 
     .li-style {
 
