--- a/src/App.scss
+++ b/src/App.scss
@@ -9,10 +9,12 @@
 
 body {
   background: url("assets/images/back.png");
+  height: 100vh;
 }
 
 .App {
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
