--- a/src/components/layout/NavBtn.scss
+++ b/src/components/layout/NavBtn.scss
@@ -1,5 +1,5 @@
-
 @import "./src/style/helpers/variables";
+
 .nav-btn {
   cursor: pointer;
   display: flex;
@@ -25,7 +25,7 @@
     transition: 1s;
 
     .nav-line:nth-child(1) {
-      background: $primary-color;
+      background: #c95449;
       height: 3px;
       margin-bottom: 5px;
       transform: rotate(45deg) translate(5px, 5px);
@@ -35,7 +35,7 @@
     }
 
     .nav-line:nth-child(2) {
-      background: $primary-color;
+      background: #c95449;
       height: 3px;
       margin-bottom: 5px;
       opacity: 0;
@@ -44,7 +44,7 @@
     }
 
     .nav-line:nth-child(3) {
-      background: $primary-color;
+      background: #c95449;
       height: 3px;
       margin-bottom: 5px;
       transform: rotate(-45deg) translate(7px, -6px);
