--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #f9f7f3;
-$secondary-color: #abb6bb;
-$primary-font-color: #AD662B;
-$secondary-font-color: #405b61
+$primary-color: #F7F7FF;
+$secondary-color: #2d415c;
+$primary-font-color: #BDD5EA;
+$secondary-font-color: #495867
