--- a/src/components/layout/Title.scss
+++ b/src/components/layout/Title.scss
@@ -5,10 +5,20 @@
   color: $secondary-font-color;
   font-family: 'Trajan Pro 3', serif;
   font-size: 3.5rem;
-  margin: 200px;
+  margin-left: 10rem;
   line-height: 1.1;
 
   span {
     color: #c95449;
+  }
+
+  &.close {
+    transform: translateX(10%);
+    transition: .7s;
+  }
+
+  &.show {
+    transform: translateX(-10%);
+    transition: 1.5s;
   }
 }
