--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -1,5 +1,8 @@
 .home {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
